feat(backend damages): change damages fix system -> has to be confirmed by both sides to be marked as fixed
