# Code/Server/utils/error.go
@@ -37,6 +37,7 @@ const (
 	DocumentNotFound             ErrorCode = "document-not-found"
 	DamageNotFound               ErrorCode = "damage-not-found"
 	DamageAlreadyExists          ErrorCode = "damage-already-exists"
+	CannotUpdateFixedDamage      ErrorCode = "cannot-update-fixed-damage"
 	DamageAlreadyFixed           ErrorCode = "damage-already-fixed"
 	FailedLinkImage              ErrorCode = "failed-to-link-image"
 	BadBase64String              ErrorCode = "bad-base64-string"
